test_scores/negative_dimers/features/Q96KB5.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q96KB5.pkl.xz